; ModuleID = '/home/carl/AnghaBench/8cc/extr_gen.c_emit_binop_float_arith.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_gen.c_emit_binop_float_arith.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }

@SAVE = common dso_local global i32 0, align 4
@KIND_DOUBLE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"addsd\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"addss\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"subsd\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"subss\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"mulsd\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"mulss\00", align 1
@.str.6 = private unnamed_addr constant [6 x i8] c"divsd\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"divss\00", align 1
@.str.8 = private unnamed_addr constant [22 x i8] c"invalid operator '%d'\00", align 1
@.str.9 = private unnamed_addr constant [16 x i8] c"%s #xmm0, #xmm1\00", align 1
@.str.10 = private unnamed_addr constant [6 x i8] c"movsd\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"movss\00", align 1
@.str.12 = private unnamed_addr constant [16 x i8] c"%s #xmm1, #xmm0\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @emit_binop_float_arith to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_binop_float_arith(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load i32, i32* @SAVE, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 3
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @KIND_DOUBLE, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  store i32 %13, i32* %4, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  switch i32 %16, label %37 [
    i32 43, label %17
    i32 45, label %22
    i32 42, label %27
    i32 47, label %32
  ]

17:                                               ; preds = %1
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0)
  store i8* %21, i8** %3, align 8
  br label %42

22:                                               ; preds = %1
  %23 = load i32, i32* %4, align 4
  %24 = icmp ne i32 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0)
  store i8* %26, i8** %3, align 8
  br label %42

27:                                               ; preds = %1
  %28 = load i32, i32* %4, align 4
  %29 = icmp ne i32 %28, 0
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0)
  store i8* %31, i8** %3, align 8
  br label %42

32:                                               ; preds = %1
  %33 = load i32, i32* %4, align 4
  %34 = icmp ne i32 %33, 0
  %35 = zext i1 %34 to i64
  %36 = select i1 %34, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0)
  store i8* %36, i8** %3, align 8
  br label %42

37:                                               ; preds = %1
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @error(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.8, i64 0, i64 0), i32 %40)
  br label %42

42:                                               ; preds = %37, %32, %27, %22, %17
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 2
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @emit_expr(i32 %45)
  %47 = call i32 @push_xmm(i32 0)
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @emit_expr(i32 %50)
  %52 = load i32, i32* %4, align 4
  %53 = icmp ne i32 %52, 0
  %54 = zext i1 %53 to i64
  %55 = select i1 %53, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0)
  %56 = call i32 @emit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0), i8* %55)
  %57 = call i32 @pop_xmm(i32 0)
  %58 = load i8*, i8** %3, align 8
  %59 = call i32 @emit(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0), i8* %58)
  ret void
}

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @emit_expr(i32) #1

declare dso_local i32 @push_xmm(i32) #1

declare dso_local i32 @emit(i8*, i8*) #1

declare dso_local i32 @pop_xmm(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
